# kalmanif

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: kalmanifConfig.cmake.in
docs/: Doxyfile  demo.md  publications.md
examples/: CMakeLists.txt  demo_diff_drive.cpp  demo_diff_drive_self_calib.cpp  demo_se2.cpp  demo_se3.cpp  demo_se_2_3.cpp
examples/utils/: plots.h  rand.h  utils.h
include/kalmanif/: enable_manif.h  extended_kalman_filter.h  invariant_extended_kalman_filter.h  kalmanif.h  rauch_tung_striebel_smoother.h  square_root_extended_kalman_filter.h  unscented_kalman_filter_manifolds.h
include/kalmanif/impl/: cholesky.h  covariance_base.h  covariance_square_root_base.h  crtp.h  eigen.h  extended_kalman_filter.h  invariance.h  invariant_extended_kalman_filter.h  kalman_filter_base.h  linearized.h  linearized_invariant.h  macro.h  manif.h  rauch_tung_striebel_smoother.h  square_root_extended_kalman_filter.h  traits.h  types.h  unscented_kalman_filter_manifolds.h
include/kalmanif/measurement_models/: dummy_gps_measurement_model.h  landmark_measurement_model.h  measurement_model_base.h  measurement_model_bundle_wrapper.h
include/kalmanif/system_models/: diff_drive_system_model.h  lie_system_model.h  simple_imu_system_model.h  system_model_base.h
test/: CMakeLists.txt  gtest_demo_se2.cpp  gtest_demo_se3.cpp  gtest_demo_se_2_3.cpp
