<?xml version="1.0"?>
<package format="2">
  <name>kalmanif</name>
  <version>0.0.0</version>
  <description>The kalmanif package</description>

  <author>Jeremie Deray</author>

  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <url type="repository">https://github.com/artivis/kalmanif.git</url>
  <url type="bugtracker">https://github.com/artivis/kalmanif/issues</url>

  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_export_depend>manif</build_export_depend>

  <!-- <test_depend>sciplot</test_depend> -->
  <test_depend>gtest</test_depend>
  <test_depend>manif</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
